# code-readiness

./: .env.example  .gitignore  .gitleaks.toml  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  PLANS.md  README.md  alembic.ini  compose.yml  justfile  pyproject.toml
.codex/: config.toml  hooks.json  memories.md
.codex/agents/: reviewer.toml
.codex/hooks/: check-docs.sh  pre-tool-use-security.sh  session-start-bootstrap.sh
.codex/rules/: default.rules
.codex/skills/openapi-sync/: SKILL.md
.codex/skills/release-check/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  branch-protection.json  dependabot.yml  labels.yml  pull_request_template.md  task-discovery.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/codex/prompts/: review.md
.github/proof/: ci-budget.json  error-event.json  issues.json  pr-review-comment.md
.github/workflows/: backlog-health.yml  ci.yml  deploy.yml  error-to-insight.yml  observability-check.yml  pr-review.yml  release-notes.yml  security-review.yml
alembic/: env.py
alembic/versions/: 0001_create_widgets.py
docs/adr/: 0001-fastapi-sqlalchemy-uv.md
docs/api/: openapi.yaml
docs/architecture/: ARCHITECTURE.md
docs/observability/: README.md  schema.md
docs/product/: analytics-events.yml  error-pipeline.md  experiments.yml
docs/security/: data-handling.md
monitoring/alerts/: alerts.yaml
monitoring/dashboards/: README.md
monitoring/profiling/: README.md  widget-routes.prof
monitoring/quality/: README.md
runbooks/: devcontainer-rebuild.md  incident.md  local-db-reset.md  post-deploy.md
scripts/: bootstrap-worktree.sh  check-architecture.py  check-build-surface.py  check-debt.py  check-devcontainer.py  check-flaky-tests.py  check-large-files.py  check-observability.py  check-pii-handling.py  check-product-surface.py  check-secrets.py  check-security-surface.py  check-task-discovery.py  export_openapi.py  post-deploy-check.sh  profile-widget-routes.sh  vulture_whitelist.py
src/code_readiness_template/: analytics.py  app.py  config.py  db.py  feature_flags.py  observability.py
src/code_readiness_template/features/: __init__.py  widgets.py
tests/integration/: conftest.py  test_widgets_api.py
tests/unit/: test_analytics.py  test_app_runtime.py  test_db_config.py  test_feature_flags.py  test_observability.py  test_privacy_routes.py  test_security_hook.py  test_widget_routes.py  test_widgets.py
